<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:a="http://schemas.android.com/apk/res/android"
	a:orientation="vertical"
	style="@style/FillParent">
	<de.agrothe.go.ScoreView a:id="@+id/scoreView"
		a:layout_width="fill_parent"
		a:layout_height="fill_parent"
		a:gravity="center_vertical"
		a:layout_alignParentTop="true"
		a:layout_above="@+id/boardView"
		a:padding="5dip"
		a:stretchColumns="1,2"
		a:shrinkColumns="0">
		<TableRow>
			<TextView a:text="@string/blackColorText"
				a:layout_column="1"
				style="@style/TableLayoutTextCentered"/>
			<TextView a:text="@string/whiteColorText"
				style="@style/TableLayoutTextCentered"/>
		</TableRow>
		<TableRow>
			<TextView a:id="@+id/capturesRowTextView"
				a:text="@string/capturesLabelText"
				style="@style/TableLayoutText"/>
			<TextView a:id="@+id/blackCapturesTextView"
				style="@style/TableLayoutTextCentered"/>
			<TextView a:id="@+id/whiteCapturesTextView"
				style="@style/TableLayoutTextCentered"/>
		</TableRow>
		<TableRow>
			<TextView a:id="@+id/moveRowTextView"
				a:text="@string/moveLabelText"
				style="@style/TableLayoutText"/>
			<include layout="@layout/move_cell"
				a:id="@+id/blackMoveCell"/>
			<include layout="@layout/move_cell"
				a:id="@+id/whiteMoveCell"/>
		</TableRow>
		<TableRow a:id="@+id/scoreTableRow"
			a:visibility="invisible">
			<TextView
				a:text="@string/scoreLabelText"
				style="@style/TableLayoutText"/>
			<TextView a:id="@+id/blackScoreTextView"
				style="@style/TableLayoutTextCentered"/>
			<TextView a:id="@+id/whiteScoreTextView"
				style="@style/TableLayoutTextCentered"/>
		</TableRow>
		<TextView a:id="@+id/messageScoreTextView"
			a:visibility="gone"
			style="@style/TableLayoutTextCentered"/>
	</de.agrothe.go.ScoreView>
	<de.agrothe.go.BoardView a:id="@id/boardView"
		style="@style/FillParent"
		a:layout_alignParentBottom="true"/>
</RelativeLayout>

